# flipper-iot-suite

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  fap.yml  mkdocs.yml
.github/workflows/: docs.yml
docs/: index.md
src/: main.c
